# modelbuilder

./: .gitignore  CMakeLists.txt  README
PythonPly/: .gitignore  README.md  ply2ascii  pyply.py
models/: rope.ply
pipeline/: chull.py  combine_clouds.py  convert.py  data_process.py  model_builder.py  open_all.py  out.stly  output.ply  ply2ascii  process_model.py  pyply.py  transform_processor.py
src/: CMakeLists.txt  calculate_checkerboard_transforms.cpp  cloud_ops.cpp  concatenate_clouds.cpp  find_model.cpp  get_chessboard_pose.cpp  model_building.cpp  pcl_typedefs.h  process_model.cpp  template_alignment.cpp  utils_cv.cpp  utils_pcl.cpp  utils_pcl.h
